--- a/src/app/feature/actor/actor-list/actor-list.component.html
+++ b/src/app/feature/actor/actor-list/actor-list.component.html
@@ -1,13 +1,15 @@
-<span class='component-title'>[{{ title }}]</span>
-<span>+</span>
+<section class="heading">
+    <span class='page-title font-weight-bold font-italic'>[{{ title }}]</span>
+    <a routerLink='/actor/create'>
+        <img width='20' height='20' src='assets/add-icon.png' title='Add Actor'>
+    </a>
+</section>
 <table *ngIf="actors" class="table table-sm table-striped">
     <thead>
         <tr>
             <th>ID</th>
             <th>First Name</th>
             <th>Last Name</th>
-            <th>Gender</th>
-            <th>Birth Date</th>
             <th>Action</th>
         </tr>
     </thead>
@@ -16,9 +18,14 @@
             <td>{{ actor.id }}</td>
             <td>{{ actor.firstName }}</td>
             <td>{{ actor.lastName }}</td>
-            <td>{{ actor.gender }}</td>
-            <td>{{ actor.birthDate }}</td>
-            <td>D | E</td>
+            <td>
+                <a routerLink='/actor/detail/{{actor.id}}'>
+                    <img width='20' height='20' src='assets/details.png' title='Actor Details'>
+                </a> | 
+                <a routerLink='/actor/edit/{{actor.id}}'>
+                    <img width='20' height='20' src='assets/pencil-icon.png' title='Edit Actor'>
+                </a>
+            </td>
         </tr>
     </tbody>
 </table>
