--- a/src/app/feature/actor/actor-maint-shared/actor-maint.component.html
+++ b/src/app/feature/actor/actor-maint-shared/actor-maint.component.html
@@ -16,7 +16,7 @@
                     Last Name:
                 </td>
                 <td>
-                    <input [(ngModel)]="actor.lastName" class="rounded" type="number">
+                    <input [(ngModel)]="actor.lastName" class="rounded" type="text">
                 </td>
             </tr>
             <tr>
