--- a/src/app/feature/movie/movie-detail/movie-detail.component.html
+++ b/src/app/feature/movie/movie-detail/movie-detail.component.html
@@ -11,7 +11,7 @@
             </tr>
             <tr>
                 <td>Title:</td>
-                <td><input [(ngModel)]="movie.title" class="rounded" type="text" disabled></td>
+                <td><input [(ngModel)]="movie.title" class="rounded" type="text"  size="50" disabled></td>
             </tr>
             <tr>
                 <td>Rating:</td>
