--- a/src/app/feature/movie/movie-maint-shared/movie-maint.component.html
+++ b/src/app/feature/movie/movie-maint-shared/movie-maint.component.html
@@ -8,7 +8,7 @@
                     Title:
                 </td>
                 <td>
-                    <input [(ngModel)]="movie.title" class="rounded" type="text">
+                    <input [(ngModel)]="movie.title" class="rounded" type="text" size="50">
                 </td>
             </tr>
             <tr>
